--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,29 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  @apply p-12;
 }
 
+input {
+  @apply bg-white border border-gray-300 rounded-lg py-2 px-4 block w-full appearance-none leading-normal
+}
+input:focus {
+  @apply outline-none shadow-outline
+}
+button {
+   @apply text-white font-bold bg-blue-500 border border-gray-300 rounded-lg py-2 px-4 block w-full appearance-none leading-normal
+}
+button:hover {
+  @apply transition duration-200 bg-blue-600
+}
+button:focus {
+  @apply outline-none shadow-outline
+}
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply underline text-blue-700
 }
-
-* {
-  box-sizing: border-box;
+a:hover {
+  @apply text-blue-900 transition duration-200
 }
